# bevy_eulerian_fluid

./: .gitignore  Cargo.toml  README.md  index.html
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
assets/shaders/: draw_levelset.wgsl
crates/example_utils/: Cargo.toml
crates/example_utils/src/: fps_counter.rs  lib.rs  material.rs  overlay.rs  scene_helper.rs  solid_boundaries.rs
examples/: dam_break.rs  droplet.rs  flow_around_circle.rs  interaction.rs  multiple.rs  rigid_body.rs  solid_body.rs  various_shapes.rs  velocity_overlay.rs  water_surface.rs
examples/demo/: main.rs
src/: diagnostics.rs  euler_fluid.rs  lib.rs  material.rs  pipeline.rs  plugin.rs  texture.rs  velocity_overlay.rs
src/diagnostics/: calculate_volume.rs  calculate_volume.wgsl  component.rs  debug_draw_particles.rs  max_velocity.rs  max_velocity.wgsl  min_velocity.rs  min_velocity.wgsl  plugin.rs  render_node.rs  ui.rs
src/euler_fluid/: advect_levelset.rs  advect_scalar.rs  advection.rs  apply_forces.rs  common_pass.rs  definition.rs  divergence.rs  extrapolate_velocity.rs  fluid_bind_group.rs  fluid_source.rs  fluid_status.rs  fluid_to_solid.rs  fluid_uniform.rs  geometry.rs  initialize.rs  levelset_gradient.rs  obstacle.rs  particle_levelset.rs  particle_levelset_two_layers.rs  physics_time.rs  pipeline.rs  projection.rs  reinitialize_levelset.rs  render_node.rs  settings.rs  setup_components.rs  solve_pressure.rs  solve_velocity.rs  update_area_fraction.rs  update_solid.rs
src/velocity_overlay/: construct_map.rs  draw_map.rs
tools/: gen-guid.ps1
(+121 files in other folders)
