[package]
name = "bevy_eulerian_fluid"
version = "0.2.0"
edition = "2021"
description = "An eularian fluid simulation plugin for Bevy."
categories = ["game-development", "science", "simulation"]
keywords = ["bevy", "fluid", "simulation", "physics", "graphics"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/narasan49/bevy_eulerian_fluid"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
    "crates/*",
]

[dependencies]
bevy = {version = "0.17", default-features = false, features = [
    "bevy_pbr",
    "bevy_render",
    "bevy_sprite_render"
]}
avian2d = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
bevy = {version = "0.17", default-features = false, features = [
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_render",
    "bevy_winit",
    "bevy_window",
    "default_font",
    "https",
    "png",
    "x11",
    "webgpu",
]}
example_utils = { path = "crates/example_utils" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1